Modified a small styling to the about section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
 
                     <div>
-                        <h3 class="text-tertiary color-white">Unforgettable Dining Experience</h3>
+                        <h3 class="text-tertiary color-secondary">Unforgettable Dining Experience</h3>
 
                         <p>
                             At Aroma, we create a mesmerizing ambience with elegant decor and soothing music, ensuring an unforgettable
@@ -83,7 +83,7 @@
                     </div>
 
                     <div>
-                        <h3 class="text-tertiary color-white">Passionate Culinary Experts</h3>
+                        <h3 class="text-tertiary color-secondary">Passionate Culinary Experts</h3>
 
                         <p>
                             Our talented chefs and attentive servers are dedicated to providing exceptional service and exquisite dishes.
