Added a new section Exclusives

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
         </section>
         <!-- End of Menu -->
 
+        <section class="exclusives">
+            <span>Tab 1</span>
+
+            <span>Tab 2</span>
+
+            <span>Tab 3</span>
+        </section>
+        <!-- End of Exclusives -->
+
         <section class="reviews">
             Reviews
         </section>
