Menu section completed

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <p class="text-tertiary fw-300 mb-md header__hero--subtitle">Where every meal is a Masterpiece</p>
 
             <div class="btn--group">
-                <button class="btn btn--lg btn--primary">
+                <button class="btn btn--primary">
                     Order Now
                 </button>
 
-                <button class="btn btn--lg btn--secondary">
+                <button class="btn btn--secondary">
                     View Menu
                 </button>
             </div>
@@ -104,8 +104,84 @@
         <section class="menu section bg-dark">
             <h2 class="section--heading text-uppercase text-center color-primary text-secondary" id="menu-section">Menu</h2>
 
-            
-        </section>
+            <div class="menu__cards">
+                <article class="menu__card bg-black">
+                    <img src="./assets/appetizer-img.png" alt="apperizer" class="menu__card--img" />
+
+                    <h3 class="text-tertiary color-primary menu__card--title">
+                        Appetizers
+                    </h3>
+
+                    <ul class="menu__card--items">
+                        <li>Mini Tacos</li>
+                        <li>Chicken Wings</li>
+                        <li>Stuffed Mushrooms</li>
+                    </ul>
+
+                    <button class="btn btn--secondary btn--lg menu__card--button">
+                        Explore
+                    </button>
+                </article>
+                <!-- End of Menu card 1 -->
+
+                <article class="menu__card bg-black">
+                    <img src="./assets/main-course-img.png" alt="main-course" class="menu__card--img" />
+
+                    <h3 class="text-tertiary color-primary menu__card--title">
+                        Main Course
+                    </h3>
+
+                    <ul class="menu__card--items">
+                        <li>Steak Frites</li>
+                        <li>Chicken Alfredo</li>
+                        <li>Margherita Pizza</li>
+                    </ul>
+
+                    <button class="btn btn--secondary btn--lg menu__card--button">
+                        Explore
+                    </button>
+                </article>
+                <!-- End of Menu card 2 -->
+
+                <article class="menu__card bg-black">
+                    <img src="./assets/dessert-img.png" alt="apperizer" class="menu__card--img" />
+
+                    <h3 class="text-tertiary color-primary menu__card--title">
+                        Desserts
+                    </h3>
+
+                    <ul class="menu__card--items">
+                        <li>Tiramisu</li>
+                        <li>Apple Pie</li>
+                        <li>Chocolate Lava Cake</li>
+                    </ul>
+
+                    <button class="btn btn--secondary btn--lg menu__card--button">
+                        Explore
+                    </button>
+                </article>
+                <!-- End of Menu card 3 -->
+
+                <article class="menu__card bg-black">
+                    <img src="./assets/beverages-img.png" alt="apperizer" class="menu__card--img" />
+
+                    <h3 class="text-tertiary color-primary menu__card--title">
+                        Beverages
+                    </h3>
+
+                    <ul class="menu__card--items">
+                        <li>Herbal Tea</li>
+                        <li>Iced Coffee</li>
+                        <li>Classic Margarita</li>
+                    </ul>
+
+                    <button class="btn btn--secondary btn--lg menu__card--button">
+                        Explore
+                    </button>
+                </article>
+                <!-- End of Menu card 4 -->
+            </div>
+        </section>  
         <!-- End of Menu -->
 
         <section class="exclusives">
