--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     
+    <!-- Fontawesome CDN -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
+    
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -225,8 +234,89 @@
         </section>        
         <!-- End of Exclusives -->
 
-        <section class="reviews">
-            Reviews
+        <section class="reviews section bg-dark">
+            <h2 class="section--heading text-uppercase text-center color-primary text-secondary" id="reviews-section">Reviews</h2>
+
+            <div class="container">
+                <div class="reviews__slider">
+                    <button class="reviews__slider--prev-btn">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </button>
+
+                    <article class="reviews__slider--slide reviews__slider--slide-1">
+                        <h4 class="reviews__slider--slide--title text-tertiary color-primary">
+                            A Culinary Delight!
+                        </h4>
+
+                        <p class="reviews__slider--slide--description">
+                            Aroma offers an exceptional dining experience with flavorful dishes and top-notch service. Each visit leaves a 
+                            lasting impression, making it a go-to spot for food lovers.
+                        </p>
+
+                        <div class="reviews__slider--slide--person">
+                            <img src="./assets/reviewer-1.png" alt="" class="reviews__slider--slide--person--img" />
+
+                            <p class="reviews__slider--slide--person--name color-secondary text-center">
+                                Sarah Thompson
+                            </p>
+
+                            <p class="reviews__slider--slide--person--location text-small color-secondary text-center">
+                                New York, NY
+                            </p>
+                        </div> 
+                    </article>
+
+                    <article class="reviews__slider--slide reviews__slider--slide-2">
+                        <h4 class="reviews__slider--slide--title text-tertiary color-primary">
+                            Unforgettable Ambiance
+                        </h4>
+
+                        <p class="reviews__slider--slide--description">
+                            The ambience at Aroma is simply mesmerizing, making every meal a memorable event. The elegant decor and soothing
+                             music create a perfect setting for any occasion.
+                        </p>
+
+                        <div class="reviews__slider--slide--person">
+                            <img src="./assets/reviewer-2.png" alt="" class="reviews__slider--slide--person--img" />
+
+                            <p class="reviews__slider--slide--person--name color-secondary">
+                                Mark Johnson
+                            </p>
+
+                            <p class="reviews__slider--slide--person--location color-secondary text-small">
+                                Los Angeles, CA
+                            </p>
+                        </div> 
+                    </article>
+
+                    <article class="reviews__slider--slide reviews__slider--slide-3">
+                        <h4 class="reviews__slider--slide--title text-tertiary color-primary">
+                            Perfect for Food Lovers!
+                        </h4>
+
+                        <p class="reviews__slider--slide--description">
+                            Every dish at Aroma is a masterpiece, bursting with rich and delicious flavors. The chefs’ dedication to 
+                            quality and creativity is evident in every bite.
+                        </p>
+
+                        <div class="reviews__slider--slide--person">
+                            <img src="./assets/reviewer-3.png" alt="" class="reviews__slider--slide--person--img" />
+
+                            <p class="reviews__slider--slide--person--name color-secondary text-center">
+                                Emily Davis
+                            </p>
+
+                            <p class="reviews__slider--slide--person--location color-secondary text-small text-center">
+                                Chicago, IL
+                            </p>
+                        </div> 
+                    </article>
+
+                    <button class="reviews__slider--next-btn">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+            </div>
         </section>
         <!-- End of Reviews -->
 
